<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="test.xk_ys_VOOLOC.Lock_of_address">

    <RelativeLayout
        style="@style/RelativeLayout_style"
        android:background="@color/bannercolor">

        <TextView
            android:id="@+id/back"
            style="@style/correct_back"
            android:background="@drawable/back"/>

        <TextView
            style="@style/banerText"
            android:text="@string/Lock_of_address" />

        <TextView
            style="@style/forward"/>
    </RelativeLayout>

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/set_address"
        android:textSize="@dimen/text_title" />

    <EditText
        android:layout_marginTop="60dp"
        style="@style/EditText_style"
        android:id="@+id/lock_address"
        android:gravity="center"/>

    <TextView
        android:id="@+id/finish"
        style="@style/TextView_style"
        android:layout_marginTop="60dp"
        android:text="@string/finish" />
</LinearLayout>
