<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relative1"
    tools:context="test.xk_ys_VOOLOC.input_password">

    <TextView
        android:id="@+id/input_back"
        android:layout_height="48dp"
        android:layout_width="48dp"
        android:layout_marginTop="4dp"

        android:background="@drawable/back2"/>
    <LinearLayout
        android:padding="16dp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView

            android:text="@string/login_way"
            style="@style/sizeline"
            android:textSize="24dp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_marginTop="20dp"
                android:orientation="horizontal"

                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:id="@+id/nation"
                    android:lines="1"
                    android:text="CN > +86"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content">

                </TextView>
                <EditText
                    android:layout_marginLeft="5dp"
                    android:textColorHint="@color/colorhint"
                    android:textSize="16dp"
                    android:hint="@string/input_phone_number"
                    android:textCursorDrawable="@null"
                    android:inputType="phone"
                    android:lines="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/input_account"
                    android:padding="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:orientation="horizontal"

                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:lines="1"
                    android:text="@string/password"

                    android:layout_width="80dp"
                    android:layout_height="wrap_content">

                </TextView>
                <EditText
                    android:layout_marginLeft="5dp"
                    android:textColorHint="@color/colorhint"
                    android:textSize="16dp"
                    android:hint="@string/input_password"
                    android:textCursorDrawable="@null"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/input_password"
                    android:padding="8dp"/>

            </LinearLayout>


        </LinearLayout>
        <TextView
            android:layout_marginTop="4dp"
            android:padding="8dp"
            android:text="@string/forget_password"
            android:layout_gravity="end"
            android:id="@+id/input_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/Tip"/>

        <Button
            android:layout_marginTop="23dp"
            android:text="@string/login"
            android:id="@+id/login"
            style="@style/button_one" />
    </LinearLayout>
</RelativeLayout>
