<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="test.xk_ys_VOOLOC.legal_provisions">

    <RelativeLayout
        style="@style/RelativeLayout_style"
        android:background="@color/bannercolor">

        <TextView
            android:id="@+id/correct_back"
            style="@style/correct_back"
            />

        <TextView
            style="@style/forward"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:text="法律条款"
                android:textSize="@dimen/text_title" />

            <ScrollView
                android:layout_width="250dp"
                android:layout_height="300dp"
                android:scrollbars="none">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/test"
                    android:textSize="@dimen/text_normal" />
            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_frame"
                    android:text="@string/agress"
                    android:id="@+id/agress"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/text_emphasize" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:lines="1"
                    android:background="@drawable/button_frame"
                    android:text="@string/disagress"
                    android:textColor="#ffffff"
                    android:id="@+id/disagress"
                    android:textSize="@dimen/text_emphasize" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
